1992-02-28  dickey@software.org

	* certify/release.txt: newest fix

1992-02-27  dickey@software.org

	* src/vcs/Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org

	* src/vcs/Makefile: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-27  dickey@software.org

	* src/permit/Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org

	* src/permit/Makefile:
	BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-27  dickey@software.org

	* src/link2rcs/Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org

	* src/link2rcs/Makefile:
	BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-27  dickey@software.org

	* src/copy/Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org

	* src/copy/Makefile: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-27  dickey@software.org

	* src/checkup/Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org

	* src/checkup/Makefile:
	BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-27  dickey@software.org

	* src/checkout/Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org

	* src/checkout/Makefile:
	BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-27  dickey@software.org

	* src/checkin/Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org

	* src/checkin/Makefile:
	BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-27  dickey@software.org

	* src/baseline/Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org

	* src/baseline/Makefile:
	BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-27  dickey@software.org

	* src/Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org

	* src/Makefile: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-27  dickey@software.org

	* Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org
