@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19920228
+MANIFEST for cm_tools, version t19920304
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
